--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -37,6 +37,10 @@
 	--blanco-color: #F0F3F5;
   }
 
+  .container-fluid{
+    background-color: var(--azul-color);
+  }
+
 
 .categoria {
     margin-right:0!important;
@@ -44,20 +48,11 @@
 
 .navegacion{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 8px 32px;
     align-items: center;
     margin-top:12vh;
-}
-
-.navegacion a svg{
-	width: 10%;
-    transform: rotate(180deg);
-}
-
-.navegacion a:nth-child(1):hover{
-	transform: translate(-5px, 0px);
-    transition: 0.3s ease-in-out all ;
+    background-color: #130F1D;
 }
 
 
@@ -69,12 +64,12 @@
 }
 
 .barra .active{
-    background-color: var(--rojo-color);
+    border: 1px var(--rojo-color) solid;
     color: white;
 }
 
 .barra a:hover{
-    background-color: var(--rojo-color);
+    border: 1px var(--rojo-color) solid;
     color: white;
 }
 
@@ -86,11 +81,12 @@
     margin: 0px 16px;
     padding: 16px 32px;
     transition: 0.1s ease-in all;
-    color: var(--azul-color);
+    color: var(--blanco-color);
+    border: 1px transparent solid;
 }
 
 #navbar{
-    background-color:#FB2443;
+    background-color:var(--azul-color);
 }
 
 main{
@@ -152,6 +148,64 @@ main{
     max-width:100%;
     height:auto;
     width: 100%;
+    object-fit: cover;
+}
+
+.barra-interior{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    background-color: #1e1730;
+    padding: 8px;
+}
+
+.barra-interior a{
+    padding: 8px 16px;
+    color: white;
+    background-color: #1e1730;
+    border: 2px var(--rojo-color) solid;
+    border-radius: 32px;
+    text-decoration: none;
+    font-size: 14px;
+}
+.barra-interior a:hover{
+    padding: 8px 16px;
+    color: white;
+    background-color: var(--rojo-color);
+    border: 2px var(--rojo-color) solid;
+    border-radius: 32px;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+
+.barra-interior h4{
+    margin: 0;
+    font-weight: lighter;
+}
+
+#image-gallery{
+    width: 70vw;
+    margin: 4rem auto;
+}
+
+#main-image{
+    width: 100%;
+    box-shadow: rgba(0,0, 0, 0.5) 0px 4px 12px;
+}
+
+#miniaturas{
+    display: flex;
+    justify-content:center;
+    margin-top: 2rem;
+
+}
+
+.miniatura{
+    width: 100px;
+    height: 100px;
+    margin: 0 10px;
+    cursor: pointer;
     object-fit: cover;
 }
 
