--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -179,7 +179,7 @@ main{
     background-color: #1e1730;
     padding: 16px 32px;
     margin: 0;
-    margin-top: 90px;
+    margin-top: 7%;
 }
 
 .barra-interior a{
