--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -95,6 +95,7 @@
 #navbar div:first-child{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 #navbar .barra{
@@ -116,12 +117,30 @@ main{
 
 .trabajos{
     display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.trabajos a{
+    height: 500px;
+    flex-grow: 1;
+    flex-basis: 0;
+    flex: 1;
+    padding:0!important;
+    margin:0!important;
+    display: flex;
+    border-radius: 0;
+    border: 0;
+    animation: 0.3s ease-in-out all;
 }
 
 
 .card{
     height: 500px;
-    width: 100%;
+    flex-grow: 1;
+    flex-basis: 0;
+    flex: 1;
     padding:0!important;
     margin:0!important;
     display: flex;
@@ -149,11 +168,11 @@ main{
 
 }
 
- .card .card-title {
+ .trabajos a .card .card-title {
     position: absolute;
 	text-align: center;
-	font-weight: bold;
-	font-size: 16px;
+	font-weight: bold!important;
+	font-size: 24px;
     color:white;
     text-decoration: none;
     width: 100%;
@@ -161,10 +180,12 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    text-transform: uppercase;
-    animation: 3s ease-in all;
+    animation: 0.3s ease-in all;
   }
 
+  .trabajos a .card .card-title p{
+    font-weight: bold;
+  }
 .card-image img{
     max-width:100%;
     height:auto;
@@ -209,15 +230,15 @@ main{
 
 #image-gallery{
     display: flex;
-    width: 100vw;
+    width: 100%;
     margin: 32px auto;
     justify-content: center;
-    padding: 0% 15%
+    padding: 0% 10%;
 }
 
 #main-image{
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 70vh;
     box-shadow: rgba(0,0, 0, 0.5) 0px 4px 12px;
     margin-right: 32px;
     aspect-ratio: 16 / 9;
@@ -226,14 +247,23 @@ main{
 #miniaturas{
     display: flex;
     flex-direction: column;
-    justify-content:center;
-    margin-top: 2rem;
+    justify-content:space-between;
 }
 
 .miniatura{
     width: 100px;
     height: 100px;
     margin: 10px 0px;
+    cursor: pointer;
+    object-fit: cover;
+    filter: brightness(0.7);
+    transition: 0.2s ease-in all;
+}
+
+.avocado{
+    width: 50px;
+    height: 50px;
+    margin: 5px 0px;
     cursor: pointer;
     object-fit: cover;
     filter: brightness(0.7);
@@ -270,6 +300,8 @@ main{
 }
 
 @media(min-width:300px) and (max-width:768px){
+
+    
     .navegacion{
         display: flex;
         flex-direction: column;
@@ -287,9 +319,34 @@ main{
         margin: 0px 0px;
         padding: 8px 8px;
         transition: 0.1s ease-in all;
-        color: var(--azul-color);
+        color: var(--blanco-color);
         font-size: 14px;
     }
+
+    .menu li.dropdown:hover .submenu {
+        display: block;
+      }
+      
+      .submenu {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: 1;
+        background-color: #fff;
+        padding: 0;
+        margin: 0;
+        border: 1px solid #ccc;
+      }
+      
+      .submenu li {
+        display: block;
+      }
+      
+      .arrow {
+        font-size: 0.8em;
+        margin-left: 5px;
+      }
 
     .navegacion a svg{
         display: none;
@@ -312,7 +369,7 @@ main{
         animation: 0.3s ease-in-out all;
     }
     
-    .card .card-title {
+    .trabajos a .card .card-title {
         position: absolute;
         text-align: center;
         font-weight: bold;
@@ -330,4 +387,5 @@ main{
      
 
 }
+
 
