--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -147,6 +147,7 @@ main{
     border-radius: 0;
     border: 0;
     animation: 0.3s ease-in-out all;
+    background-size: contain;
 }
 
 
@@ -159,12 +160,13 @@ main{
 .card .card-image img {
     max-width: 100%;
 	height: inherit;
+    transition: 0.3s ease-in all;
     filter: brightness(0.2);
 }
 
-.card:hover{
-    background-size: fill;
-    filter: brightness(1.8);
+.card:hover .card-image img{
+    background-size:cover;
+    filter: brightness(0.6);
 
 }
 
@@ -228,7 +230,7 @@ main{
     font-weight: lighter;
 }
 
-#image-gallery{
+#image-gallery, .gallery{
     display: flex;
     width: 100%;
     margin: 32px auto;
@@ -236,15 +238,16 @@ main{
     padding: 0% 10%;
 }
 
-#main-image{
+#main-image, .main-item{
     width: auto;
     height: 70vh;
     box-shadow: rgba(0,0, 0, 0.5) 0px 4px 12px;
     margin-right: 32px;
     aspect-ratio: 16 / 9;
+    cursor: pointer;
 }
 
-#miniaturas{
+#miniaturas, .thumbnails{
     display: flex;
     flex-direction: column;
     justify-content:space-between;
@@ -298,6 +301,37 @@ main{
     border-radius: 32px;
     text-decoration: none;
 }
+
+#fullImageView{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+    cursor: pointer;
+}
+
+#fullImage{
+    margin: 24px auto;
+    max-width: 98%;
+    max-height: 98%;
+    box-shadow: 0px 0px 73px 98px rgba(0,0,0,0.8);
+
+
+    
+}
+
+#CloseButton{
+    position: absolute;
+    top: 12px;
+    right: 20px;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+}
+
 
 @media(min-width:200px) and (max-width:768px){
 
