--- a/css/styles.css
+++ b/css/styles.css
@@ -208,12 +208,15 @@ a:hover {
 	line-height: 0;
 	text-decoration: none;
 	transition: all 0.2s;
+	cursor: pointer;
 }
 
 .btn-solid-lg:hover {
-	background-color: transparent;
+	background-color: white;
+	border: 1px solid white;
 	color: var(--rojo-color); /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
+	cursor: pointer;
 }
 
 .btn-outline-reg {
@@ -349,7 +352,6 @@ a:hover {
 .navbar .logo-image img {
     width: 50%;
 	height: auto;
-	margin-left: 2rem;
 }
 
 .navbar .logo-text {
@@ -362,7 +364,6 @@ a:hover {
 
 .logo{
 	width: 128px;
-	margin-left: 2rem;
 }
 
 .offcanvas-collapse {
@@ -632,32 +633,36 @@ a:hover {
 }
 
 
-.video-container{
+.video-container,.video-container2{
 	position: fixed;
 	top:0;
 	left:0;
 	width: 100%;
 	height: 100%;
-	z-index:99999;
+	padding: 0% 10%;
+	z-index:9999999;
+	margin: auto auto;
 	display:flex;
 	justify-content: center;
 	align-items: center;
 	opacity: 0;
 	transition: all 0.3s;
 	pointer-events: none;
+	-webkit-box-shadow: 0px 0px 84px 17px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 84px 17px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 84px 17px rgba(0,0,0,0.75);
 }
 
-.video-container .close{
+.video-container .close, .video-container2 .close2{
 	position: absolute;
 	top: 2%;
-	right: 1%;
 	font-size: 20px;
 	cursor: pointer;
 	color: var(--rojo-color);
 	font-size: 2rem;
 	font-weight: bolder;
-	z-index: 99;
-	box-shadow: 0 0px 20px rgba(0, 0, 0, 0.2);
+	z-index: 9999;
+	box-shadow: 0 0px 20px rgba(0, 0, 0, 0.5);
 	border-radius: 50%;
 	background-color: var(--blanco-color);
 	width: 50px;
@@ -666,25 +671,33 @@ a:hover {
 	align-items: center;
 	vertical-align: middle;
 	justify-content: center;
+	transition: 0.2s all ease-in;
 	
 }
 
-.video-container video{
+.video-container .close:hover,.video-container2 #close2:hover {
+	background-color: var(--rojo-color);
+	color: white;
+}
+
+.video-container video, .video-container2 video{
 	width: 100%;
 	max-width: 85%;
 	height: auto;
 	transform: scale(0);
-	box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0px 0px 206px 138px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 206px 138px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 206px 138px rgba(0,0,0,0.75);
 	outline: none;
 	transition: all 0.3s;
 }
 
-.video-container.show{
+.video-container.show, .video-container2.show{
 	pointer-events: all;
 	opacity: 1;
 }
 
-.video-container.show video{
+.video-container.show video, .video-container2.show video{
 	transform: scale(1);
 }
 
@@ -950,20 +963,27 @@ a:hover {
 
 .cards-1 .card-body {
 	padding: 0;
+	text-decoration: none;
 }
 
 .cards-1 .card-icon {
 	width: 90px;
 	height: 90px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	margin-bottom: 2rem;
 	border-radius: 50%;
 	background-color: var(--rojo-color);
 	text-align: center;
 	transition: 1s ease-in-out all;
+	cursor:pointer;
+	text-decoration: none;
 }
 
 .cards-1 .card-icon:hover{
-	transform: rotate(180deg);
+	transform: rotate(360deg);
+	cursor:pointer;
 }
 
 .cards-1 .card-icon .far,
@@ -2104,11 +2124,9 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
-    max-width: 1200px;
+    width: 100%;
     height: 100%;
-    margin: 0 auto;
-    padding: 12px 0px;
+    padding: 12px 2rem;
 }
 
 .menu2__links{
@@ -2122,12 +2140,12 @@ a:hover {
     position: relative;
     height: 100%;
     --clip: polygon(0 0, 100% 0, 100% 0, 0 0);
-    --transform: rotate(-90deg);
+    --transform: rotate(0deg);
 }
 
 .menu2__item:hover{
     --clip: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    --transform: rotate(0);
+    --transform: rotate(90deg);
 }
 
 .menu2__link{
@@ -2172,7 +2190,7 @@ a:hover {
 }
 
 .menu2__hamburguer{
-    height: 100%;
+    height: 50px;
     display: flex;
     align-items: center;
     padding: 4px 4px;
